--- a/sawayaka_dental_clinic/assets/css/style.css
+++ b/sawayaka_dental_clinic/assets/css/style.css
@@ -14,6 +14,26 @@ body {
   letter-spacing: 0.05rem;
 }
 
+img {
+  height: auto;
+  max-width: 100%;
+}
+
+a {
+  color: inherit;
+  cursor: pointer;
+}
+
+ul,ol {
+  list-style: none;
+}
+
+li {
+  list-style-type: none; /* リストマーカーを非表示 */
+  padding: 0; /* ul要素のpaddingをリセット */
+  margin: 0; /* ul要素のmarginをリセット */
+}
+
 /* header-navとmainを分割 */
 .container{
   display: flex;
@@ -33,8 +53,7 @@ body {
 .header {
   position: fixed;
   height: 100vh;
- /* #E9DFC3 66 (40%透明度) */
-  background: #E9DFC366;
+  background: #E9DFC366; /* #E9DFC3 66 (40%透明度) */
   border-radius: 2px;
   font-size: 1.6rem;
   z-index: 9999;
@@ -51,6 +70,7 @@ body {
   padding: 0;
   cursor: pointer;
   margin-top: 10px;
+  z-index: 13;
 }
 
 .hamburger-menu-bar {
@@ -91,46 +111,69 @@ body {
 
 .navigation {
   display: none;
-  margin-left: calc(50% - 40vw);
   background: #E9DFC3;
   border-radius: 10px;
   position: absolute;
+  width: 500px;
+  padding: 15px 35px 10px 35px;
+  top: 0;
+  right: 0;
+  text-align: left;
+}
+
+.navigation-logo {
+  width: 180px;
+  display: block;
 }
 
 .navigation-logo img{
-  margin: 10px;
+  width: 100%;
+}
+
+.navigation-inner {
+  margin-top: 35px;
+  max-width: 430px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .navigation-button {
-  list-style-type: none; /* リストマーカーを非表示 */
-  padding: 0; /* ul要素のpaddingをリセット */
-  margin: 0; /* ul要素のmarginをリセット */
   display: flex; /* flexboxを適用 */
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
 }
 
-.navigation-button img{
+.navigation-button li {
+  width: calc(100% - 70px);
+}
+
+.navigation-button li a {
   display: block;
-  width: 30%;
+}
+
+.navigation-button li a img{
+  width: 100%;
 }
 
 .navigation-list {
-  text-align: center;
-  list-style: none;
+  margin-top: 20px;
 }
 
 .navigation-list-item {
   position: relative;
-  margin-bottom: 1em;
+  padding-left: 56px;
+  padding-bottom: 10px;
 }
 
 .navigation-list-item:before {
   content: '';
   position: absolute;
   left: 50%;
-  bottom: -10px;/*線の上下位置*/
+  bottom: 0;/*線の上下位置*/
   display: inline-block;
-  width: 400px;/*線の長さ*/
-  height: 2px;/*線の太さ*/
+  width: 100%;/*線の長さ*/
+  height: 3px;/*線の太さ*/
   transform: translateX(-50%);/*位置調整*/
   background-color: #1B56FD;/*線の色*/
   border-radius: 2px;/*線の丸み*/
@@ -138,36 +181,27 @@ body {
 
 .navigation-link {
   color: #000;
-  font-weight: 700;
-  font-size: 1.4rem;
   text-decoration: none;
   display: block;
   margin-top: 20px;
+  font-weight: 700;
+  font-size: 2.2rem;
 }
 
-
-.address {
-  margin-top: 20px;
-  margin-left: 20px;
-  font-size: 1.4rem;
+.navigation-text {
+  margin-top: 30px;
 }
 
-.address-access {
+.navigation-address {
+  font-size: 2.0rem;
+}
+
+.navigation-address:not(:first-child) {
   margin-top: 10px;
-  margin-left: 20px;
-  font-size: 1.4rem;
 }
 
-.address-info {
-  margin-left: 20px;
-  margin-bottom: 20px;
+.color-red {
   color: #FF0000;
-  font-size: 1.4rem;
-}
-
-.sp_br {
-  display: none;
-  /* 1279.9px以上では改行タグを無効に。 */
 }
 
 .nav-inner-menu-reservation img{
@@ -251,54 +285,319 @@ body {
   margin-left: 15px;
 }
 
+.main{
+  margin: 40px 95px 150px 95px;
+}
+
+/* ここからお知らせ */
 .news {
-  margin-top: 40px;
-  margin-left: 130px;
 }
 
 .news-title {
   font-size: 2.8rem;
+  font-weight: 700;
 }
 
 .news-list {
   list-style: none;
   margin-top: 20px;
   margin-left: 20px;
-  text-decoration: underline #1B56FD;
-  text-underline-offset:16px;
-
 }
 
 .news-list-text {
-  margin-top: 32px;
   font-size: 1.6rem;
+  position: relative;
+  padding-left: 35px;
+  padding-bottom: 8px;
 }
 
-a{
+.news-list-text:before {
+  content: '';
+  position: absolute;
+  left: 38%;
+  bottom: 0;/*線の上下位置*/
+  display: inline-block;
+  width: 70%;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  transform: translateX(-50%);/*位置調整*/
+  background-color: #1B56FD;/*線の色*/
+  border-radius: 2px;/*線の丸み*/
+}
+
+.news-list-text time{
+  margin-right: 60px;
+}
+
+.news-list-text a{
   text-decoration: none;
-  color: #000;
+}
+
+.news-more {
+  text-align: right;
+  margin-top: -65px;
+}
+
+.news-more a{
 }
 
 .news-more img{
-  width: 140px;
-  height: 40px;
-  float: right;
-
+  width: 240px;
+  height: 72px;
 }
 
+/* ここからクリニック紹介  */
 .about {
-  margin-top: 80px;
+margin-top: 80px;
 }
 
 .about-title {
+  font-size: 3.2rem;
   text-align: center;
 }
 
+.br-sp{
+  display: none;
+}
+
+.about-img {
+  display: flex;
+  margin-top: 60px;
+}
+
 .about-img img{
-  width: 90%;
-  height:90%;
+  width: 50%;
+  border-radius: 2px;
+}
+
+.about-text {
+  margin: 0 auto;
+  font-size: 1.8rem;
+}
+
+.about-more {
+  text-align: right;
+  margin-top: -65px;
+}
+
+.about-more img{
+  width: 240px;
+  height: 72px;
+}
+
+/* ここから診療内容 */
+.services {
+  text-align: center;
+}
+
+.services-title {
+  font-size: 2.8rem;
+  font-weight: 700;
+  margin-top: 100px;
+}
+
+.services-text {
+  font-size: 1.6rem;
+  margin-top: 40px;
 
 }
+
+.services-container {
+  display: flex;
+  margin-top: 30px;
+  justify-content: space-between;
+}
+
+.services-container-list {
+  width: 240px;
+  height: 310px;
+  border: 4px solid #1B56FD;
+  border-radius: 2px;
+}
+
+.services-container-list-title {
+  font-size: 2.0rem;
+  margin-top: 20px;
+}
+
+.services-container-list-img {
+  display: flex;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background-color: #1B56FD66;/*  66 (40%透明度) */
+  margin: 0 auto;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.services-container-list-img img{
+  margin: 0 auto;
+}
+
+.services-container-list-text {
+  font-size: 1.8rem;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.arrow{
+	position: relative;
+	display: inline-block;
+	color: #1B56FD;
+}
+
+.arrow::before,
+.arrow::after{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	margin: auto;
+	content: "";
+	vertical-align: middle;
+}
+
+.services-container-list-arrow::before{
+	left: 75px;
+	width: 32px;
+	height: 4px;
+	background: #1B56FD;
+	transform: rotate(45deg);
+}
+.services-container-list-arrow::after{
+	left: 80px;
+	width: 25px;
+	height: 25px;
+	border-right: 4px solid #1B56FD;
+	border-bottom: 4px solid #1B56FD;
+}
+
+/* ここから院長あいさつ */
+.message {
+}
+
+.message-title {
+  font-size: 2.8rem;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 100px;
+}
+
+.message-img {
+  display: flex;
+  margin-top: 60px;
+}
+
+.message-img img{
+  width: 50%;
+  border-radius: 2px;
+}
+
+.message-text {
+  margin: 0 auto;
+  font-size: 1.8rem;
+}
+
+.message-more {
+  text-align: right;
+  margin-top: -65px;
+}
+
+.message-more img{
+  width: 240px;
+  height: 72px;
+}
+
+/* ここからフッター */
+.footer {
+  margin-top: 150px;
+}
+
+.header-logo {
+  text-align: center;
+}
+
+.header-logo img{
+  width: 340px;
+  height: 95px;
+}
+
+.footer-container {
+  margin: 40px 40px 30px 95px;
+}
+
+.footer-container-left {
+
+}
+
+.footer-container-left-address {
+  font-size: 2.2rem;
+  margin-top: 15px;
+}
+
+.footer-container-left-access-info {
+  font-size: 2.2rem;
+}
+
+.footer-container-left-tel {
+  font-size: 2.2rem;
+  font-weight: 700;
+  margin-top: 30px;
+}
+
+.tel-number{
+  font-size: 3.6rem;
+  font-weight: 500;
+  line-height: 60px;
+  margin-left: 20px;
+}
+
+.footer-container-left-reservation-btm {
+  margin-top: -70px;
+  margin-left: 400px;
+}
+
+.footer-container-left-reservation-btm img{
+  width: 240px;
+  height: 72px;
+}
+
+.footer-container-left-information{
+  font-size: 2.8rem;
+  color: #1B56FD;
+  margin-top: 30px;
+
+}
+
+.footer-container-left-information img{
+
+}
+
+
+.closed-days{
+  color: #000;
+}
+
+.footer-container-right {
+
+}
+
+.footer-nav {
+
+}
+
+.footer-nav-category {
+
+}
+
+.footer-nav-item-list {
+
+}
+
+.footer-nav-item-list-text {
+
+}
+
 
 /* レスポンシブ */
 @media screen and (max-width: 1279.9px) {
@@ -319,6 +618,9 @@ a{
   width: 60px;
   height: 30px;
   margin-top: 5px;
+}
+
+.hamburger-menu-bar {
 }
 
 .hamburger-menu-bar:first-child {
@@ -348,56 +650,66 @@ a{
 }
 
 .navigation {
+  width: 330px;
+  padding: 10px 30px 10px 30px;
+}
 
+.navigation-logo {
+  width: 150px;
+}
+
+.navigation-logo img{
+}
+
+.navigation-inner {
+  margin-top: 20px;
+  max-width: 270px;
 }
 
 .navigation-button {
-  list-style-type: none; /* リストマーカーを非表示 */
-  padding: 0; /* ul要素のpaddingをリセット */
-  margin: 0; /* ul要素のmarginをリセット */
-  display: flex; /* flexboxを適用 */
 }
 
-.navigation-button img{
-  display: block;
-  width: 30%;
+.navigation-button li {
+}
+
+.navigation-button li a {
+}
+
+.navigation-button li a img{
+}
+
+.navigation-list {
+  margin-top: 15px;
+}
+
+.navigation-list-item {
+  padding-left: 35px;
+  padding-bottom: 8px;
 }
 
 .navigation-list-item:before {
-  bottom: -10px;/*線の上下位置*/
-  display: inline-block;
-  width: 300px;/*線の長さ*/
-  height: 2px;/*線の太さ*/
+  height: 2px;
 }
 
 .navigation-link {
-  font-size: 1.2rem;
-  display: block;
-  margin-top: 20px;
-}
-.address {
-  margin-top: 20px;
-  margin-left: 20px;
-  font-size: 1.2rem;
-}
-
-.address-access {
   margin-top: 10px;
-  margin-left: 20px;
+  font-size: 1.4rem;
+}
+
+.navigation-text {
+  margin-top: 20px;
+}
+
+.navigation-address {
   font-size: 1.2rem;
 }
 
-.address-info {
-  margin-left: 20px;
-  margin-bottom: 20px;
-  color: #FF0000;
-  font-size: 1.2rem;
+.navigation-address:not(:first-child) {
+  margin-top: 8px;
 }
 
-.sp_br {
-    display: block;
-    /* 1279.9px未満で改行タグを有効に。 */
-  }
+.color-red {
+}
 
 .nav-inner-menu-reservation img{
   margin: 30px 5px 0 5px;
@@ -437,17 +749,137 @@ a{
   width: 60%;
   height: auto;
 }
+
+.main{
+  margin: 40px 25px 150px 25px;
+}
+
+/* ここからお知らせ */
+.news {
+}
+
+.news-title {
+  font-size: 1.6rem;
+  margin-left: 20px;
+}
+
+.news-list {
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+.news-list-text {
+  font-size: 1.4rem;
+  padding-left: 35px;
+  padding-bottom: 5px;
+}
+
+.news-list-text:before {
+  left: 35%;
+  width: 62%;
+}
+
+.news-list-text time{
+  margin-right: 50px;
+}
+
+.news-list-text a{
+}
+
+.news-more {
+  margin-top: -50px;
+}
+
+.news-more a{
+}
+
+.news-more a img{
+  width: 190px;
+  height: 55px;
+}
+
+/* ここからクリニック紹介  */
+.about {
+  margin-top: 50px;
+}
+
+.about-title {
+  font-size: 2.4rem;
+}
+
+.br-sp{
+}
+
+.about-img {
+  display: flex;
+  margin-top: 40px;
+}
+
+.about-img img{
+  width: 40%;
+  border-radius: 2px;
+}
+
+.about-text {
+  font-size: 1.4rem;
+}
+
+.about-more {
+}
+
+.about-more img{
+  width: 190px;
+  height: 55px;
+}
+
+/* ここから診療内容 */
+
+
+
+/* ここから院長あいさつ */
+.message {
+  margin-top: 50px;
+}
+
+.message-title {
+  font-size: 2.4rem;
+}
+
+.message-img {
+  margin-top: 40px;
+}
+
+.message-img img{
+  width: 40%;
+}
+
+.message-text {
+  font-size: 1.4rem;
+}
+
+.message-more {
+  margin-top: 0;
+}
+
+.message-more img{
+  width: 190px;
+  height: 55px;
+}
+
+
+
+
 }
 
 @media screen and (max-width: 767.9px) {
 .right-section { /* header-nav*/
   width: 40px;
-  right: 10px;
 }
 
 .left-section {/* main */
-  width: calc(100% - 0px);
+  width: calc(100% - 40px);
 }
+
  /* header nav*/
 .header {
   height: 0vh;
@@ -460,6 +892,9 @@ a{
   background: #E9DFC366;
   border-radius: 10px;
   padding: 0;
+}
+
+.hamburger-menu-bar {
 }
 
 .hamburger-menu-bar:first-child {
@@ -489,59 +924,65 @@ a{
 }
 
 .navigation {
+  width: 270px;
+  padding: 8px 25px 8px 25px;
+}
+
+.navigation-logo {
+  width: 120px;
 }
 
 .navigation-logo img{
-  margin: 10px;
-  width: 50%;
-  height: 50%;
 }
 
-.navigation-buttom {
-  list-style-type: none; /* リストマーカーを非表示 */
-  padding: 0; /* ul要素のpaddingをリセット */
-  margin: 0; /* ul要素のmarginをリセット */
-  display: flex; /* flexboxを適用 */
+.navigation-inner {
+  margin-top: 20px;
+  max-width: 270px;
 }
 
-.navigation-buttom img{
-  display: block;
-  width: 30%;
+
+.navigation-button {
+}
+
+.navigation-button li {
+}
+
+.navigation-button li a {
+}
+
+.navigation-button li a img{
 }
 
 .navigation-list {
+  margin-top: 10px;
 }
 
-.navigation-list-item:before{
-  bottom: -10px;/*線の上下位置*/
-  width: 150px;/*線の長さ*/
-  height: 2px;/*線の太さ*/
+.navigation-list-item {
+  padding-left: 25px;
+  padding-bottom: 8px;
+}
 
+.navigation-list-item:before {
 }
 
 .navigation-link {
-  font-size: 1.2rem;
-  display: block;
   margin-top: 10px;
+  font-size: 1.2rem;
 }
 
-.address {
+.navigation-text {
   margin-top: 20px;
-  margin-left: 20px;
-  font-size: 1.2rem;
 }
 
-.address-access {
-  margin-top: 10px;
-  margin-left: 20px;
-  font-size: 1.2rem;
+.navigation-address {
+  font-size: 1.0rem;
 }
 
-.address-info {
-  margin-left: 20px;
-  margin-bottom: 20px;
-  color: #FF0000;
-  font-size: 1.2rem;
+.navigation-address:not(:first-child) {
+  margin-top: 8px;
+}
+
+.color-red {
 }
 
 .nav-inner-menu-reservation {
@@ -553,14 +994,13 @@ a{
 }
 
 .nav-inner-TOP {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   position: fixed;
-  bottom: 0;
+  width: 40px;
 }
 
 .nav-inner-TOP img{
-  margin-top: 36px;
-  width: 60%;
+  width: 75%;
 }
 
 /* メインビジュアル */
@@ -594,6 +1034,134 @@ a{
   margin-top: 5px;
   margin-left: 10px;
 }
+.main{
+  margin: 20px 40px 100px 10px;
+}
+
+/* ここからお知らせ */
+.news {
+}
+
+.news-title {
+  font-size: 1.4rem;
+  margin-left: 10px;
+}
+
+.news-list {
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+.news-list-text {
+  font-size: 1.2rem;
+  padding-left: 25px;
+  padding-bottom: 3px;
+}
+
+.news-list-text:before {
+  left: 45%;
+  width: 80%;/*線の長さ*/
+}
+
+.news-list-text time{
+  margin-right: 40px;
+}
+
+.news-list-text a{
+}
+
+.news-more {
+  margin-top: 10px;
+}
+
+.news-more a{
+}
+
+.news-more a img{
+  width: 110px;
+  height: 32px;
+}
+
+/* ここからクリニック紹介  */
+.about {
+margin-top: 40px;
+}
+
+.about-title {
+  font-size: 2.0rem;
+}
+
+.br-sp{
+  display: block;
+}
+
+.about-img {
+  display: block;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.about-img img{
+  width: 50%;
+}
+
+.about-text {
+  display: inline-block;
+  text-align: left;
+  font-size: 1.2rem;
+  margin-top: 10px;
+}
+
+.about-more {
+  margin-top: 10px;
+}
+
+.about-more a{
+}
+
+.about-more img{
+  width: 110px;
+  height: 32px;
+}
+
+/* ここから診療内容 */
+
+/* ここから院長あいさつ */
+.message {
+  margin-top: 40px;
+}
+
+.message-title {
+  font-size: 2.0rem;
+}
+
+.message-img {
+  display: block;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.message-img img{
+  width: 50%;
+}
+
+.message-text {
+  display: inline-block;
+  text-align: left;
+  font-size: 1.2rem;
+  margin-top: 10px;
+}
+
+.message-more {
+  margin-top: 10px;
+}
+
+.message-more img{
+  width: 110px;
+  height: 32px;
+}
+
+
 }
 
 
